<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="pizza_activity_name">Customize Pizza</string>
    <string name="current_order_activity_name">Current Order</string>
    <string name="order_list_activity_name">Order List</string>
    <string name="phone_number">Customer Phone Number</string>
    <string name="deluxe">Deluxe</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="current_order">Current Order</string>
    <string name="order_list">Order List</string>
    <string name="size_select">Select Size:</string>
    <string name="pizza_image_of_selection">Pizza Image of Selection</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="add_topping">Add Toppings</string>
    <string name="selected_topping">Selected Toppings</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="price">Price $</string>
    <string name="add_to_order">Add to Order</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="subtotal">Subtotal $</string>
    <string name="sales_tax">Sales Tax $</string>
    <string name="order_total">Order Total $</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="place_order">Place Order</string>
    <string name="long_press_to_remove_pizza">Long Press to Remove Pizza</string>
    <string name="cancel_order">Cancel Order</string>
</resources>