<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pizzaConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pizzaImage"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pizza_image_of_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <Spinner
        android:id="@+id/sizeSpinner"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pizzaImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaImage" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/size_select"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sizeSpinner"
        app:layout_constraintStart_toEndOf="@+id/pizzaImage" />

    <TextView
        android:id="@+id/pizzaNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pizza_name"
        android:text="@string/pizza_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/pizzaImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addToppingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_topping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <TextView
        android:id="@+id/selectedToppingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/selected_topping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzaImage" />

    <ListView
        android:id="@+id/addToppingListView"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToppingTextView" />

    <ListView
        android:id="@+id/selectedToppingListView"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedToppingTextView">

    </ListView>

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberString"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/priceString"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addToOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onAddToOrderButton"
        android:text="@string/add_to_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneNumberString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/phone_number"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/PriceTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/priceString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/price"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/addToOrderButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>