<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/currentOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onCurrentOrderButton"
        android:text="@string/current_order"
        android:textSize="20sp"
        app:icon="@drawable/shoopingcart"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/deluxeImage"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout" />

    <Button
        android:id="@+id/orderListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onOrderListButton"
        android:text="@string/order_list"
        android:textSize="20sp"
        app:icon="@drawable/orderlist"
        app:iconGravity="top"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/deluxeImage"
        app:layout_constraintTop_toBottomOf="@+id/currentOrderButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/hawaiianButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onPizzaButton"
        android:text="@string/pepperoni"
        android:textSize="20sp"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="@+id/pepperoniImage"
        app:layout_constraintStart_toStartOf="@+id/pepperoniImage"
        app:layout_constraintTop_toBottomOf="@+id/pepperoniImage" />

    <Button
        android:id="@+id/deluxeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onPizzaButton"
        android:text="@string/deluxe"
        android:textSize="20sp"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="@+id/deluxeImage"
        app:layout_constraintStart_toStartOf="@+id/deluxeImage"
        app:layout_constraintTop_toBottomOf="@+id/deluxeImage" />

    <ImageView
        android:id="@+id/pepperoniImage"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pepperoni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pepperoniButton"
        app:srcCompat="@drawable/pepperoni" />

    <Button
        android:id="@+id/pepperoniButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onPizzaButton"
        android:text="@string/hawaiian"
        android:textSize="20sp"
        app:iconGravity="top"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="@+id/hawaiianImage"
        app:layout_constraintStart_toStartOf="@+id/hawaiianImage"
        app:layout_constraintTop_toBottomOf="@+id/hawaiianImage" />

    <ImageView
        android:id="@+id/deluxeImage"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/deluxe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
        app:srcCompat="@drawable/deluxe" />

    <ImageView
        android:id="@+id/hawaiianImage"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/hawaiian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deluxeButton"
        app:srcCompat="@drawable/hawaiian" />

</androidx.constraintlayout.widget.ConstraintLayout>